# elastic-grep

./: .gitignore  LICENSE  MANIFEST.in  README.md  loggrep  pyproject.toml  setup.cfg  setup.py
src/: loggrep.py
src/elastic_grep/: __main__.py  elastic_grep.py
