[metadata]
name = elastic_grep
version = 0.0.6
author = Kees van Reeuwijk
author_email = C.vanReeuwijk@uva.nl
url = https://github.com/UvA-FNWI/elastic-grep
description = Grep an ElasticSearch database
long_description = file: README.md
long_description_content_type = text/markdown
keywords = elasticsearch, grep, searching
license = BSD
license_file = LICENSE
platforms = any
setup_requires =
    elasticsearch7
install_requires =
    elasticsearch7
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: System Administrators
    Topic :: System :: Logging
    Typing :: Typed
    Operating System :: OS Independent
project_urls =
    Source=https://github.com/UvA-FNWI/elastic-grep
    Tracker=https://github.com/UvA-FNWI/elastic-grep/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    elastic_grep=elastic_grep:main
